# keysafe-app

./: .gitignore  MakeHwFile  Makefile  README.md
app/: Cargo.toml  build.rs  conf.toml  schema.sql
app/src/: main.rs
app/src/ecall/: mod.rs
app/src/endpoint/: auth_token.rs  middleware.rs  mod.rs  service.rs  utils.rs
app/src/persistence/: mod.rs
docker/: Dockerfile  get_ks_sgx.sh  get_sgx_ssl.sh
enclave/: Cargo.toml  Enclave.edl  Makefile
enclave/src/: lib.rs
scripts/: prepare_bin.sh
