[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"
edition = "2021"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
tokio-stream = "0.1.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
scoped-tls = "1.0"
tokio-rustls = { version = "0.22" }


[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }

