[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"
edition = "2021"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
tokio = { version = "=1.13.1", features = ["full"] }
tokio-stream = "=0.1.1"
warp = { version = "=0.3.2", features = ["tls"] }
futures-util = { version = "=0.3.17", default-features = false, features = ["sink"] }
scoped-tls = "=1.0"
tokio-rustls = { version = "=0.22" }
proc-macro2 = { version = "=1.0.32" }
openssl = "=0.10.28"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }

