[package]
name = "app"
version = "1.0.0"
authors = ["The Teaclave Authors"]
build = "build.rs"
edition = "2021"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
actix-web = { version = "4", features = ["openssl"] }
actix-files = { version = "0.6.0" }
futures-util = { version = "=0.3.17", default-features = false, features = ["sink"] }
scoped-tls = "=1.0"
proc-macro2 = { version = "=1.0.32" }
quote = { version = "=1.0.10" }
openssl = "=0.10.38"
lettre = "0.10.0-rc.4"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }

